src/compose/tests/invalid_identifiers/fn.wgsl
#define_import_path fns

pub fn fine(in: f32) -> f32 {return in;}
pub fn bad_(in: f32) -> f32 {return in;}
